# rk3588_fire_smoke_detect

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
src/: main.cpp
src/draw/: cv_draw.cpp  cv_draw.h
src/engine/: rknn_engine.cpp  rknn_engine.h
src/process/: postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h
src/rkmedia/utils/: mpp_decoder.cpp  mpp_encoder.cpp  mpp_encoder.h
src/task/: yolox_custom.cpp  yolox_custom.h
src/utils/: common.h  datatype.h  engine_helper.h  logging.h
